plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7' 
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.efub'
version = '0.0.1-SNAPSHOT'
description = 'awa_project'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

ext {
	querydslVersion = "5.0.0"
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// jwt
	implementation 'io.jsonwebtoken:jjwt:0.12.6'
	implementation 'javax.xml.bind:jaxb-api:2.3.1'
	// spring security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	// mail
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	// s3
	implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.0.1")
	implementation "io.awspring.cloud:spring-cloud-aws-starter-s3"
	// queryDsl
	implementation "com.querydsl:querydsl-jpa:${querydslVersion}:jakarta"
	annotationProcessor "com.querydsl:querydsl-apt:${querydslVersion}:jakarta"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.test {
    systemProperties System.getProperties()
}
tasks.withType(Test) {
    systemProperty "spring.cloud.aws.s3.bucket", System.getProperty("AWS_S3_BUCKET_NAME") 
}
